<resources>
    <string name="app_name">PokeApp</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_evolution">Evolution</string>
    <string name="tab_stats">Stats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="base_stats">BASE STATS</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="spd">SPD</string>
    <string name="spAtk">SPATK</string>
    <string name="spDEF">SPDEF</string>


    <string name="long_text">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum \nlorem ipsum lorem ipsum lorem ipsum lorem ipsum \nlorem ipsum lorem ipsum lorem ipsum </string>

</resources>