<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.detail.StatsFragment">


    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="24.0 KG" />

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_regular"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_weight"
        app:layout_constraintTop_toTopOf="@+id/tv_weight"
        tools:text="11 M" />

    <TextView
        android:id="@+id/weight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Weight"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tv_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_weight"
        tools:text="Weight" />

    <TextView
        android:id="@+id/height_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Height"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_weight"
        app:layout_constraintTop_toBottomOf="@+id/tv_height" />

    <TextView
        android:id="@+id/stats_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/proxima_nova_extrabold"
        android:text="@string/base_stats"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_title" />

    <TextView
        android:id="@+id/hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/hp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_title" />

    <com.skydoves.progressview.ProgressView
        android:id="@+id/progress_hp"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/hp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hp"
        app:layout_constraintTop_toTopOf="@+id/hp"
        app:progressView_colorBackground="@color/white"
        app:progressView_colorProgress="@color/type_fighting"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/black"
        app:progressView_labelSize="12sp"
        app:progressView_radius="12dp" />

    <TextView
        android:id="@+id/attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/atk"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hp" />

    <com.skydoves.progressview.ProgressView
        android:id="@+id/progress_attack"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/attack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/progress_hp"
        app:layout_constraintTop_toTopOf="@+id/attack"
        app:progressView_colorBackground="@color/white"
        app:progressView_colorProgress="@color/type_fire"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/black"
        app:progressView_labelSize="12sp"
        app:progressView_radius="12dp" />

    <TextView
        android:id="@+id/defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/def"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attack" />

    <com.skydoves.progressview.ProgressView
        android:id="@+id/progress_defense"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/defense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/progress_hp"
        app:layout_constraintTop_toTopOf="@+id/defense"
        app:progressView_colorBackground="@color/white"
        app:progressView_colorProgress="@color/type_water"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/black"
        app:progressView_labelSize="12sp"
        app:progressView_radius="12dp" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/spd"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defense" />

    <com.skydoves.progressview.ProgressView
        android:id="@+id/progress_speed"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/progress_hp"
        app:layout_constraintTop_toTopOf="@+id/speed"
        app:progressView_colorBackground="@color/white"
        app:progressView_colorProgress="@color/flying"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/black"
        app:progressView_labelSize="12sp"
        app:progressView_radius="12dp" />

    <TextView
        android:id="@+id/exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/exp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed" />

    <com.skydoves.progressview.ProgressView
        android:id="@+id/progress_exp"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/exp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/progress_hp"
        app:layout_constraintTop_toTopOf="@+id/exp"
        app:progressView_colorBackground="@color/white"
        app:progressView_colorProgress="@color/type_grass"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/black"
        app:progressView_labelSize="12sp"
        app:progressView_radius="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>